<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View">

    <ImageView
        android:id="@+id/viewBackgroundImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bgImgDesc"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paperbg" />

    <androidx.cardview.widget.CardView
        android:id="@+id/viewTitleCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/viewTitleTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/traveling_typewriter"
                        android:gravity="center"
                        android:text="@string/viewAll"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="5dp"
      app:cardBackgroundColor="@color/black"
      app:layout_constraintBottom_toTopOf="@+id/headerLayout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
      android:id="@+id/headerLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="5dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/viewTitleCard">

        <androidx.cardview.widget.CardView
          android:layout_width="1dp"
          android:layout_height="match_parent"
          app:cardBackgroundColor="@color/black"
          app:cardElevation="0dp"
          app:cardMaxElevation="0dp" />

        <TextView
          android:id="@+id/nameHeader"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:layout_weight="1"
          android:fontFamily="@font/traveling_typewriter"
          android:gravity="center"
          android:text="@string/headerName"
          android:textColor="@color/black"
          android:textStyle="bold" />

        <androidx.cardview.widget.CardView
          android:layout_width="1dp"
          android:layout_height="match_parent"
          app:cardBackgroundColor="@color/black"
          app:cardElevation="0dp"
          app:cardMaxElevation="0dp" />

        <TextView
          android:id="@+id/priceHeader"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:layout_weight="1"
          android:fontFamily="@font/traveling_typewriter"
          android:gravity="center"
          android:text="@string/headerPrice"
          android:textColor="@color/black"
          android:textStyle="bold" />

        <androidx.cardview.widget.CardView
          android:layout_width="1dp"
          android:layout_height="match_parent"
          app:cardBackgroundColor="@color/black"
          app:cardElevation="0dp"
          app:cardMaxElevation="0dp" />

        <TextView
          android:id="@+id/categoryHeader"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:layout_weight="1"
          android:fontFamily="@font/traveling_typewriter"
          android:gravity="center"
          android:text="@string/headerCategory"
          android:textColor="@color/black"
          android:textStyle="bold" />

        <androidx.cardview.widget.CardView
          android:layout_width="1dp"
          android:layout_height="match_parent"
          app:cardBackgroundColor="@color/black"
          app:cardElevation="0dp"
          app:cardMaxElevation="0dp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
      android:id="@+id/cardView2"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="5dp"
      app:cardBackgroundColor="@color/black"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/headerLayout">

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/productRecycler"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="5dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cardView2" />

</androidx.constraintlayout.widget.ConstraintLayout>